# Magnetic-Coupling-Framework-for-Soft-Robots

./: LICENSE  README.md  magnetic_rod_bending_onlyPythonScript.py  magnetic_rod_bending_withCppPlugin.py
MagneticForceField (C++ Plugin)/: CMakeLists.txt  MagneticPluginConfig.h  MagneticTetraForceField.cpp  MagneticTetraForceField.h  initMagneticPlugin.cpp  initMagneticPlugin.h
MagneticForceField(C++ Plugin)/: CMakeLists.txt  MagneticPluginConfig.h  MagneticTetraForceField.cpp  MagneticTetraForceField.h  initMagneticPlugin.cpp  initMagneticPlugin.h
